--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -585,6 +585,8 @@ var kthToLast = function(head, k) {
 
 **将值复制到数组中后用双指针法**
 
+使用双指针法来比较两端的元素，并向中间移动。一个指针从起点向中间移动，另一个指针从终点向中间移动。
+
 ```js
 var isPalindrome = function(head) {
     const vals = [];
@@ -606,4 +608,78 @@ var isPalindrome = function(head) {
   - 第二步：双指针判断是否为回文，执行了 O(n/2) 次的判断，即 O(n)。
   - 总的时间复杂度：O(2n)=O(n)。
 - 空间复杂度：O(n)，其中 n 指的是链表的元素个数，我们使用了一个数组列表存放链表的元素值
+
+**快慢指针**
+
+算法
+
+整个流程可以分为以下五个步骤：
+
+1. 找到前半部分链表的尾节点。
+2. 反转后半部分链表。
+3. 判断是否回文。
+4. 恢复链表。
+5. 返回结果。
+
+执行步骤一，我们可以计算链表节点的数量，然后遍历链表找到前半部分的尾节点。
+
+我们也可以使用快慢指针在一次遍历中找到：慢指针一次走一步，快指针一次走两步，快慢指针同时出发。当快指针移动到链表的末尾时，慢指针恰好到链表的中间。通过慢指针将链表分为两部分。
+
+若链表有奇数个节点，则中间的节点应该看作是前半部分。
+
+步骤二可以使用「206. 反转链表」问题中的解决方法来反转链表的后半部分。
+
+步骤三比较两个部分的值，当后半部分到达末尾则比较完成，可以忽略计数情况中的中间节点。
+
+步骤四与步骤二使用的函数相同，再反转一次恢复链表本身。
+
+```js
+const reverseList = (head) => {
+    let prev = null;
+    let curr = head;
+    while (curr !== null) {
+        let nextTemp = curr.next;
+        curr.next = prev;
+        prev = curr;
+        curr = nextTemp;
+    }
+    return prev;
+}
+
+const endOfFirstHalf = (head) => {
+    let fast = head;
+    let slow = head;
+    while (fast.next !== null && fast.next.next !== null) {
+        fast = fast.next.next;
+        slow = slow.next;
+    }
+    return slow;
+}
+
+var isPalindrome = function(head) {
+    if (head == null) return true;
+
+    // 找到前半部分链表的尾节点并反转后半部分链表
+    const firstHalfEnd = endOfFirstHalf(head);
+    const secondHalfStart = reverseList(firstHalfEnd.next);
+
+    // 判断是否回文
+    let p1 = head;
+    let p2 = secondHalfStart;
+    let result = true;
+    while (result && p2 != null) {
+        if (p1.val != p2.val) result = false;
+        p1 = p1.next;
+        p2 = p2.next;
+    }        
+
+    // 还原链表并返回结果
+    firstHalfEnd.next = reverseList(secondHalfStart);
+    return result;
+};
+```
+
+时间复杂度：O(n)，其中 n 指的是链表的大小。
+
+空间复杂度：O(1)。我们只会修改原本链表中节点的指向，而在堆栈上的堆栈帧不超过 O(1)。
 
