--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -683,3 +683,106 @@ var isPalindrome = function(head) {
 
 空间复杂度：O(1)。我们只会修改原本链表中节点的指向，而在堆栈上的堆栈帧不超过 O(1)。
 
+## 面试题 03.01. 三合一
+
+难度简单
+
+三合一。描述如何只用一个数组来实现三个栈。
+
+你应该实现`push(stackNum, value)`、`pop(stackNum)`、`isEmpty(stackNum)`、`peek(stackNum)`方法。`stackNum`表示栈下标，`value`表示压入的值。
+
+构造函数会传入一个`stackSize`参数，代表每个栈的大小。
+
+**示例1:**
+
+```
+ 输入：
+["TripleInOne", "push", "push", "pop", "pop", "pop", "isEmpty"]
+[[1], [0, 1], [0, 2], [0], [0], [0], [0]]
+ 输出：
+[null, null, null, 1, -1, -1, true]
+说明：当栈为空时`pop, peek`返回-1，当栈满时`push`不压入元素。
+```
+
+**示例2:**
+
+```
+ 输入：
+["TripleInOne", "push", "push", "push", "pop", "pop", "pop", "peek"]
+[[2], [0, 1], [0, 2], [0, 3], [0], [0], [0], [0]]
+ 输出：
+[null, null, null, null, 2, 1, -1, -1]
+```
+
+push 加入元素
+pop 删除栈顶
+isEmpty 是否空栈
+peek 查看栈顶
+
+stackNum 表示第几个栈
+stackSize 表示栈中只能有多少个元素, 可为0
+
+```js
+/**
+ * @param {number} stackSize
+ */
+var TripleInOne = function(stackSize) {
+  this.stack = []
+  this.size = stackSize
+};
+
+/** 
+ * @param {number} stackNum 
+ * @param {number} value
+ * @return {void}
+ */
+TripleInOne.prototype.push = function(stackNum, value) {
+  if(!this.stack[stackNum]){
+    this.stack[stackNum] = []
+  }
+  if(this.stack[stackNum].length < this.size){
+    this.stack[stackNum].push(value)
+  }
+
+};
+
+/** 
+ * @param {number} stackNum
+ * @return {number}
+ */
+TripleInOne.prototype.pop = function(stackNum) {
+  if(this.stack[stackNum] && this.stack[stackNum].length){
+    return this.stack[stackNum].pop()
+  }   
+  return -1
+};
+
+/** 
+ * @param {number} stackNum
+ * @return {number}
+ */
+TripleInOne.prototype.peek = function(stackNum) {
+  if(this.stack[stackNum] && this.stack[stackNum].length){
+    return this.stack[stackNum][this.stack[stackNum].length - 1]
+  }   
+  return -1
+};
+
+/** 
+ * @param {number} stackNum
+ * @return {boolean}
+ */
+TripleInOne.prototype.isEmpty = function(stackNum) {
+  return !this.stack[stackNum] || !this.stack[stackNum].length
+};
+
+/**
+ * Your TripleInOne object will be instantiated and called as such:
+ * var obj = new TripleInOne(stackSize)
+ * obj.push(stackNum,value)
+ * var param_2 = obj.pop(stackNum)
+ * var param_3 = obj.peek(stackNum)
+ * var param_4 = obj.isEmpty(stackNum)
+ */
+```
+
