--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -468,6 +468,89 @@ module.exports = {
 };
 ```
 
+## 岛屿数量
+
+**题目描述**
+
+给一个01矩阵，1代表是陆地，0代表海洋， 如果两个1相邻，那么这两个1属于同一个岛。我们只考虑上下左右为相邻。
+
+岛屿: 相邻陆地可以组成一个岛屿（相邻:上下左右） 判断岛屿个数。
+
+示例1
+
+输入
+
+```
+[[1,1,0,0,0],[0,1,0,1,1],[0,0,0,1,1],[0,0,0,0,0],[0,0,1,1,1]]
+```
+
+返回值
+
+```
+3
+```
+
+备注:
+
+```
+01矩阵范围<=200*200
+```
+
+**思路：**
+
+1. 遍历整块大陆，横着竖着遍历都可以。
+2. 第一次碰到陆地的时候，就知道这是块岛屿了，所以将这块陆地放入探险队列，岛屿数量加一。
+3. 然后我们将这块岛屿的陆地探索完。每一次将这块陆地周围（上下左右）的陆地放入队列，然后将这块陆地标记为已探索（这里就直接置为'0'了）。
+4. 当探险队列为空时，表示这块岛屿的陆地全部被探索完了，我们继续寻找下一块陆地。
+
+**BFS用的是队列---DFS用的是栈，所以直接用递归就可以了，用的系统栈；**
+
+**解法1：DFS**
+从一个为1的根节点开始访问，从每个相邻1节点向下访问到顶点（周围全是水），依次访问其他相邻1节点到顶点
+时间复杂度 : O(M×N)，其中 M 和 N 分别为行数和列数。
+空间复杂度 : 最坏情况下为 O(M×N)，此时整个网格均为陆地，深度优先搜索的深度达到 M×N。
+
+```js
+/**
+ * 判断岛屿数量
+ * @param grid char字符型二维数组 
+ * @return int整型
+ */
+function solve( grid ) {
+    // write code here
+    var r = grid.length;
+    var c = grid[0].length;
+    var count = 0;
+    if (r == 1 && c == 1) {
+        return grid[0][0] == '1';
+    }
+    
+    const dfs = function (i, j) {
+        if (i < 0 || j < 0 || i >= r || j >= c || grid[i][j] == '0') {
+            return;
+        }
+        grid[i][j] = '0';
+        dfs(i - 1, j);
+        dfs(i + 1, j);
+        dfs(i, j - 1);
+        dfs(i, j + 1);
+    }
+    
+    for (let i = 0; i < r; i++) {
+        for (let j = 0; j < c; j++) {
+            if (grid[i][j] == '1') {
+                count++;
+                dfs(i, j);
+            }
+        }
+    }
+    return count;
+}
+module.exports = {
+    solve : solve
+};
+```
+
 
 
 # 搜狗
