update：斐波那契数列

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -827,6 +827,73 @@ let result = add(str1, str2)
 console.log('result :', result) // result : 11546
 ```
 
+## 斐波那契数列
+
+**题目描述**
+
+大家都知道斐波那契数列，现在要求输入一个整数n，请你输出斐波那契数列的第n项（从0开始，第0项为0，第1项是1）。
+
+示例1
+
+输入
+
+```
+4
+```
+
+返回值
+
+```
+3
+```
+
+### 数学定义
+
+题目分析，斐波那契数列公式为：f[n] = f[n-1] + f[n-2], 初始值f[0]=0, f[1]=1，目标求f[n]
+看到公式很亲切，代码秒秒钟写完。
+
+```
+function Fibonacci(n)
+{
+    // write code here
+    if(n == 0 || n == 1){
+        return n;
+    }
+    let a = 0, b = 1;
+    for(let i = 2; i < n; ++i){
+        let c = a + b;
+        a = b;
+        b = c;
+    }
+    return a + b;
+}
+module.exports = {
+    Fibonacci : Fibonacci
+};
+```
+
+**时间复杂度**：O(N)
+**空间复杂度**：O(1)
+
+### 数组
+
+```js
+function Fibonacci(n)
+{
+    // write code here
+    let fib = [];
+    fib[0] = 0;
+    fib[1] = 1;
+    for(let i = 2; i <= n; i++){
+        fib[i] = fib[i - 1] + fib[i - 2];
+    }
+    return fib[n];
+}
+module.exports = {
+    Fibonacci : Fibonacci
+};
+```
+
 # 奇安信
 
 ## 采购员
