update：牛牛们上班

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1903,6 +1903,124 @@ module.exports = {
 };
 ```
 
+# 贝壳找房
+
+## 牛牛们上班
+
+时间限制：C/C++ 1秒，其他语言2秒
+
+空间限制：C/C++ 256M，其他语言512M
+
+在工厂中，有![img](https://www.nowcoder.com/equation?tex=%5Cmathit%20N&preview=true)个牛牛工作在一个流水线上，流水线可以看作一个坐标轴，第![img](https://www.nowcoder.com/equation?tex=%5Cmathit%20i&preview=true)个牛牛的位置是![img](https://www.nowcoder.com/equation?tex=X_i&preview=true)，延长其手臂的长度为![img](https://www.nowcoder.com/equation?tex=L_i&preview=true)，手臂可以朝向正向和反向，即第![img](https://www.nowcoder.com/equation?tex=%5Cmathit%20i&preview=true)个牛牛在流水线的工作范围为![img](https://www.nowcoder.com/equation?tex=%5BX_i%20-%20L_i%2CX_i%20%2B%20L_i%5D&preview=true)，你需要计算最多可以让多少个牛牛同时在流水线上工作且工作范围互不相交（只交在一个点也算相交）。
+
+**输入描述:**
+
+```
+第一行一个整数 n
+接下来 n 行，每行两个整数，Xi 和 Li
+所有的输入为整数，且i≠j时，Xi ≠Xj
+```
+
+**输出描述:**
+
+```
+一行一个整数代表答案
+```
+
+**输入例子1:**
+
+```
+5
+2 3
+7 1
+5 1
+8 3
+0 2
+```
+
+**输出例子1:**
+
+```
+2
+```
+
+**输入例子2:**
+
+```
+4
+2 4
+4 3
+9 3
+100 5
+```
+
+**输出例子2:**
+
+```
+2
+```
+
+**输入例子3:**
+
+```
+5
+3 1
+8 1
+7 3
+0 3
+4 2
+```
+
+**输出例子3:**
+
+```
+2
+```
+
+### 动态规划
+
+自测用例通过
+
+case通过率为0.00%
+
+```js
+let len = readline();
+// 构建输入数据input和dp数组
+let input = [], dp = [];
+for(let i = 0; i < len; i++) {
+    input[i] = new Array(2).fill(0);
+    dp[i] = new Array(2).fill(0);
+}
+// dp[index][0] 表示第index个没加上的总个数
+// dp[index][1] 表示第index个加上的总个数
+dp[0][0] = 0;
+dp[0][1] = 1;
+
+let index =0;
+while(line = readline()) {
+    let now = line.split(" ");
+    input[index][0] = +now[0];
+    input[index][1] = +now[1];
+    index++;
+}
+input.sort((a, b) => a[0] - b[0]);
+
+//分两种情况，和前一个有重合和前一个没有重合
+for(let i = 1; i < len; ++i){
+    for(let j = i - 1; j > -1; --j) {
+        if((input[i][0] - input[i][1] - (input[j][0] + input[j][1])) > 0){
+            dp[i][1] = Math.max(dp[j][1], dp[j][0]) + 1;
+            dp[i][0] = Math.max(dp[j][0], dp[j][1]);
+            continue;
+        }else{
+            dp[i][1] = dp[j][0] + 1;
+            dp[i][0] = dp[j][0];
+        }
+    }
+}
+print(Math.max(dp[len - 1][0], dp[len - 1][1]));
+```
+
 # 解题模板
 
 - node.js
