--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -518,15 +518,14 @@ module.exports = {
  */
 function solve( grid ) {
     // write code here
-    var r = grid.length;
-    var c = grid[0].length;
+    var x = grid[0].length;
+    var y = grid.length;
     var count = 0;
-    if (r == 1 && c == 1) {
+    if(y == 1 && x == 1) {
         return grid[0][0] == '1';
     }
-    
-    const dfs = function (i, j) {
-        if (i < 0 || j < 0 || i >= r || j >= c || grid[i][j] == '0') {
+    const dfs = function(i, j) {
+        if(i < 0 || j < 0 || i >= y || j >= x || grid[i][j] == '0'){
             return;
         }
         grid[i][j] = '0';
@@ -535,10 +534,9 @@ function solve( grid ) {
         dfs(i, j - 1);
         dfs(i, j + 1);
     }
-    
-    for (let i = 0; i < r; i++) {
-        for (let j = 0; j < c; j++) {
-            if (grid[i][j] == '1') {
+    for(let i = 0; i < y; i++) {
+        for(let j = 0; j < x; j++){
+            if(grid[i][j] == '1'){
                 count++;
                 dfs(i, j);
             }
@@ -550,8 +548,6 @@ module.exports = {
     solve : solve
 };
 ```
-
-
 
 # 搜狗
 
