--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1298,6 +1298,107 @@ module.exports = {
 
 # 字节跳动
 
+## 排序
+
+**题目描述**
+
+给定一个数组，请你编写一个函数，返回该数组排序后的形式。
+
+示例1
+
+**输入**
+
+```
+[5,2,3,1,4]
+```
+
+**返回值**
+
+```
+[1,2,3,4,5]
+```
+
+示例2
+
+**输入**
+
+```
+[5,1,6,2,5]
+```
+
+**返回值**
+
+```
+[1,2,5,5,6]
+```
+
+**备注:**
+
+```
+数组的长度不大于100000，数组中每个数的绝对值不超过10^9109
+```
+
+###快速排序
+
+**解题思路**：两个移动的指针和一个基准值，一次排序后应达到基准值是一个分水岭，按从小到大排序，左边应该比基准值小，右边应该比基准值大。基本思路是：开始left不动，如果right指向的值大于等于基准值（基准值的大小可以等于一开始left指向的值），就right--；如果不满足上述条件，就right指向的值赋给left，同时left++；如果left指向的值小于等于基准值，就left++；如果不满足，就left指向的值赋给right，同时right--；循环结束条件：left<rigth。
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 将给定数组排序
+ * @param arr int整型一维数组 待排序的数组
+ * @return int整型一维数组
+ */
+function MySort( arr ) {
+    // write code here
+  const sort = (array, left = 0, right = arr.length - 1) => {
+    if (left >= right) {
+      return;
+    }
+    let i = left;
+    let j = right;
+    const baseVal = array[j];
+    while (i < j) {
+      while (i < j && array[i] <= baseVal) {
+        i++;
+      }
+      array[j] = array[i];
+      while (i < j && array[j] >= baseVal) {
+        j--;
+      }
+      array[i] = array[j];
+    }
+    array[j] = baseVal;
+    sort(array, left, j - 1);
+    sort(array, j + 1, right);
+  }
+  const newArr = arr.concat();
+  sort(newArr);
+  return newArr;
+}
+module.exports = {
+    MySort : MySort
+};
+```
+
+### 库函数
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 将给定数组排序
+ * @param arr int整型一维数组 待排序的数组
+ * @return int整型一维数组
+ */
+function MySort( arr ) {
+    // write code here
+    return arr.sort((a, b) => a - b);
+}
+module.exports = {
+    MySort : MySort
+};
+```
+
 ## 单链表的排序
 
 **题目描述**
