--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1381,6 +1381,102 @@ module.exports = {
 };
 ```
 
+### 归并排序MergeSort
+
+- 归并排序（MERGE-SORT）是利用归并的思想实现的排序方法，该算法采用经典的分治（divide-and-conquer）策略（分治法将问题分(divide)成一些小的问题然后递归求解，而治(conquer)的阶段则将分的阶段得到的各答案"修补"在一起，即分而治之)。
+- 归并排序是稳定排序，它也是一种十分高效的排序，能利用完全二叉树特性的排序一般性能都不会太差。归并排序的最好，最坏，平均时间复杂度均为O(nlogn)。
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 将给定数组排序
+ * @param arr int整型一维数组 待排序的数组
+ * @return int整型一维数组
+ */
+function MySort( arr ) {
+    // write code here
+    mergeSort(arr,0,arr.length-1);
+    return arr;
+}
+function mergeSort(arr, l, r) {
+      if(l==r){
+          return;
+      }
+      var mid = l+((r-l)>>1); //中点位置，即(l+r)/2
+      mergeSort(arr,l,mid);
+      mergeSort(arr,mid+1,r);
+      merge(arr,l,mid,r);
+}
+ function merge(arr, l, mid, r){
+      var help= [];    //辅助数组
+      var i=0;
+      var p1=l; //左半数组的下标
+      var p2=mid+1; //右半数组的下标
+ 
+      //判断是否越界
+      while(p1<=mid && p2<=r){
+          help[i++]=arr[p1]<arr[p2] ? arr[p1++] : arr[p2++];
+      }
+      //p1没有越界，说明p2越界了，将左边剩余元素拷贝到辅助数组
+      while(p1<=mid){
+          help[i++]=arr[p1++];
+      }
+      //p2没有越界，说明p1越界了
+      while(p2<=r){
+          help[i++]=arr[p2++];
+      }
+      //将辅助数组元素拷贝会原数组
+      for(i=0;i<help.length;i++){
+          arr[l+i]=help[i];
+      }
+  }
+module.exports = {
+    MySort : MySort
+};
+```
+
+### **冒泡排序BubbleSort**
+
+**以升序排列为例：**将第一个元素和第二个元素比较，若前者大于后者，则交换两者的位置，再将第二个元素与第三个元素比较，若前者大于后者则交换两者位置，以此类推直到倒数第二个元素与最后一个元素比较，若前者大于后者，则交换两者位置。这样一轮比较下来将会把序列中最大的元素移至序列末尾，这样就安排好了最大数的位置，接下来只需对剩下的（n-1）个元素，重复上述操作即可。
+**时间复杂度：**
+若原数组本身就是有序的（这是最好情况），仅需n-1次比较就可完成，时间复杂度依然为O(n）；
+若是倒序，比较次数为 n-1+n-2+...+1=n(n-1)/2，交换次数和比较次数等值。所以，其时间复杂度依然为O(n2）
+**空间复杂度：**
+使用常数个辅助单元：O(1）
+
+运行超时:您的程序未能在规定时间内运行结束，请检查是否循环有错或算法复杂度过大。
+
+用例通过率：20.00%
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 将给定数组排序
+ * @param arr int整型一维数组 待排序的数组
+ * @return int整型一维数组
+ */
+function MySort( arr ) {
+    if (arr.length <= 1) return
+    for (let i = 0; i < arr.length; i++) {
+        let hasChange = false
+        for (let j = 0; j < arr.length - i - 1; j++) {
+            if (arr[j] > arr[j + 1]) {
+                const temp = arr[j]
+                arr[j] = arr[j + 1]
+                arr[j + 1] = temp
+                hasChange = true
+            }
+        }
+        // 如果false 说明所有元素已经到位
+        if (!hasChange) break
+    }
+    return arr
+}
+module.exports = {
+    MySort : MySort
+};
+```
+
 ### 库函数
 
 ```js
