--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1477,6 +1477,83 @@ module.exports = {
 };
 ```
 
+### 插入排序
+
+**解题思路**首先，我们将数组中的数据分为两个区间， 已排序区间和未排序区间。初始已排序区间只有一个元素，就是数组的第一个元素。插入算法的核心思想是取未排序区间中的元素，在已排序区间中找到合适的插入位置将其插入，并保证已排序区间数据一直有序。重复这个过程，直到未排序区间中元素为空，算法结束。
+
+插入排序也包含两种操作，一种是元素的比较，一种是元素的移动。当我们需要将一个数据a插入到已排序区间时，需要拿a与已排序区间的元素依次比较大小，找到合适的插入位置。找到插入点之后，我们还需要将插入点之后的元素顺序往后移动一位，这样才能腾出位置给元素 插入  
+
+**空间复杂度**
+
+插入排序算法的运行并不需要额外的存储空间，所以空间复杂度是O(1)  
+
+**时间复杂度**
+
+如果要排序的数据已经是有序的，我们并不需要搬移任何数据。如果我们从尾到头在有序数据组里面查找插入位置，每次只需要比较一个数据就能确定插入的位置。所以这种情况下，最好是时间复杂度为O(n)。注意，这里是从尾到头遍历已经有序的数据。
+如果数组是倒序的，每次插入都相当于在数组的第一个位置插入新的数据，所以需要移动大量的数据，所以最坏情况时间复杂度O(n2)。
+还记得我们在数组中插入一个数据的平均时间复杂度是多少吗？没错，是O(n)。所以，对于插入排序来说，每次插入操作都相当于在数组中插入一个数据，循环执行n次插入操作，所以平均时间复杂度为O(n2)  
+
+运行超时:您的程序未能在规定时间内运行结束，请检查是否循环有错或算法复杂度过大。
+
+用例通过率：20.00%
+
+```js
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ * 将给定数组排序
+ * @param arr int整型一维数组 待排序的数组
+ * @return int整型一维数组
+ */
+function MySort( arr ) {
+    // write code here
+    if (arr.length <= 1) return
+    for (let i = 1; i < arr.length; i++) {
+        const temp = arr[i]
+        let j = i - 1
+        // 若arr[i]前有大于arr[i]的值的化，向后移位，腾出空间，直到一个<=arr[i]的值
+        for (j; j >= 0; j--) {
+            if (arr[j] > temp) {
+                arr[j + 1] = arr[j]
+            } else {
+                break
+            }
+        }
+        arr[j + 1] = temp
+    }
+    return arr;
+}
+module.exports = {
+    MySort : MySort
+};
+```
+
+###  选择排序
+
+选择排序算法的实现思路有点类似插入排序，也分已排序区间和未排序区间。但是选择排序每次会从未排序区间中找到最小的元素，将其放到已排序区间的末尾。  
+
+选择排序空间复杂度为O(1)  
+
+选择排序的最好情况时间复杂度、最坏情况和平均情况时间复杂度都为O(n2)。  
+
+```js
+const selectionSort = (arr) => {
+    if (arr.length <= 1) return
+    // 需要注意这里的边界, 因为需要在内层进行 i+1后的循环，所以外层需要 数组长度-1
+    for (let i = 0; i < arr.length - 1; i++) {
+        let minIndex = i
+        for (let j = i + 1; j < arr.length; j++) {
+            if (arr[j] < arr[minIndex]) {
+                minIndex = j // 找到整个数组的最小值
+            }
+        }
+        const temp = arr[i]
+        arr[i] = arr[minIndex]
+        arr[minIndex] = temp
+    }
+    console.log(arr)
+}
+```
+
 ### 库函数
 
 ```js
