--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2173,6 +2173,94 @@ module.exports = {
 };
 ```
 
+## 跳台阶
+
+**题目描述**
+
+一只青蛙一次可以跳上1级台阶，也可以跳上2级。求该青蛙跳上一个n级的台阶总共有多少种跳法（先后次序不同算不同的结果）。
+
+示例1
+
+输入
+
+```
+1
+```
+
+返回值
+
+```
+1
+```
+
+示例2
+
+输入
+
+```
+4
+```
+
+返回值
+
+```
+5
+```
+
+```js
+function jumpFloor(number)
+{
+    // write code here
+    if(number == 0) return 1;
+    if(number == 1 || number == 2) return number;
+    let f1 = 1, f2 = 2, f3 = 0;
+    while(number > 2){
+        f3 = f1 + f2;
+        f1 = f2;
+        f2 = f3;
+        number--;
+    }
+    return f2;
+}
+module.exports = {
+    jumpFloor : jumpFloor
+};
+```
+
+```js
+function jumpFloor(number)
+{
+    // write code here
+    let arr = [1,1];
+    for(let i = 2; i <= number; i++) {
+        arr[i] = arr[i - 1] + arr[i - 2];
+    }
+    return arr[number];
+}
+module.exports = {
+    jumpFloor : jumpFloor
+};
+```
+
+### 动态规划
+
+```js
+function jumpFloor(number)
+{
+    // write code here
+    var dp = new Array(number + 1);
+    dp[0] = 1;
+    dp[1] = 1;
+    for(var i = 2; i <= number; i++){
+        dp[i] = dp[i - 1] + dp[i - 2];
+    }
+    return dp[number];
+}
+module.exports = {
+    jumpFloor : jumpFloor
+};
+```
+
 # 贝壳找房
 
 ## 牛牛们上班
