update.重建二叉树

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2261,6 +2261,71 @@ module.exports = {
 };
 ```
 
+## 重建二叉树
+
+**题目描述**
+
+输入某二叉树的前序遍历和中序遍历的结果，请重建出该二叉树。假设输入的前序遍历和中序遍历的结果中都不含重复的数字。例如输入前序遍历序列{1,2,4,7,3,5,6,8}和中序遍历序列{4,7,2,1,5,3,8,6}，则重建二叉树并返回。
+
+示例1
+
+输入
+
+```
+[1,2,3,4,5,6,7],[3,2,4,1,6,5,7]
+```
+
+返回值
+
+```
+{1,2,5,3,4,6,7}
+```
+
+### 递归
+
+二叉树的前序遍历：根左右
+二叉树的中序遍历：左根右
+二叉树的的后序遍历：左右根
+
+根据前序遍历/后序遍历+中序遍历可以重建一个二叉树，这道题考察的就是前序遍历+中序遍历重建二叉树。
+对于
+
+```js
+前序遍历 preorder = [3,9,20,15,7]
+中序遍历 inorder = [9,3,15,20,7]
+```
+
+前序遍历中的3即为根节点的值，由于输入的前序遍历和后序遍历的结果中都不含重复的数字，那么在中序遍历中，3
+前面的节点都是左子树上的节点，3后面的节点都是右子树上的节点，这一步可以获得根节点和左右两个子树，再递归地对左右子树进行
+重建，即可构建出一个新的二叉树。
+
+```js
+function TreeNode(x) {
+    this.val = x;
+    this.left = null;
+    this.right = null;
+}
+function reConstructBinaryTree(preorder, inorder)
+{
+    if (!preorder.length || !inorder.length) return null
+    let root = preorder[0]; // 前序遍历的第一个元素为根节点
+    let node = new TreeNode(root); // 确定根节点
+
+    let i = inorder.indexOf(root); // 获取根节点在中序遍历中的位置(用于分割左右子树)
+
+    // preorder.slice(1,index+1)是左子树的前序遍历
+    // inorder.slice(0,index) 是左子树的中序遍历
+    // 这一步递归的对左子树进行重建
+    node.left = reConstructBinaryTree(preorder.slice(1, i + 1), inorder.slice(0, i));
+    node.right = reConstructBinaryTree(preorder.slice(i + 1), inorder.slice(i + 1));
+    return node
+}
+module.exports = {
+    reConstructBinaryTree : reConstructBinaryTree
+};
+
+```
+
 # 贝壳找房
 
 ## 牛牛们上班
