--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2326,6 +2326,113 @@ module.exports = {
 
 ```
 
+## 实现二叉树先序，中序和后序遍历
+
+**题目描述**
+
+分别按照二叉树先序，中序和后序打印所有的节点。
+
+示例1
+
+输入
+
+```
+{1,2,3}
+```
+
+返回值
+
+```
+[[1,2,3],[2,1,3],[2,3,1]]
+```
+
+### 递归
+
+先序：根左右
+中序：左根右
+后序：左右根
+
+```js
+/*
+ * function TreeNode(x) {
+ *   this.val = x;
+ *   this.left = null;
+ *   this.right = null;
+ * }
+ */
+
+/**
+ * 
+ * @param root TreeNode类 the root of binary tree
+ * @return int整型二维数组
+ */
+function threeOrders( root ) {
+    // write code here
+    let preArray = [], middleArray = [], postArray = [];
+    function preOrder(root) {
+        if (root) {
+            preArray.push(root.val)
+            preOrder(root.left)
+            preOrder(root.right)
+        }
+    }
+    function inOrder(root) {
+        if (root) {
+            inOrder(root.left)
+            middleArray.push(root.val)
+            inOrder(root.right)
+        }
+    }
+    function postOrder(root) {
+        if (root) {
+            postOrder(root.left)
+            postOrder(root.right)
+            postArray.push(root.val)
+        }
+    }
+    preOrder(root)
+    inOrder(root)
+    postOrder(root)
+    return [preArray, middleArray, postArray]
+}
+module.exports = {
+    threeOrders : threeOrders
+};
+```
+
+```js
+/*
+ * function TreeNode(x) {
+ *   this.val = x;
+ *   this.left = null;
+ *   this.right = null;
+ * }
+ */
+
+/**
+ * 
+ * @param root TreeNode类 the root of binary tree
+ * @return int整型二维数组
+ */
+function threeOrders( root ) {
+    // write code here
+    let preOrder = [], inOrder = [], postOrder = [];
+    function find(root) {
+        if(!root) return null;
+        preOrder.push(root.val); // 先序：根左右
+        find(root.left);
+        inOrder.push(root.val); // 中序：左根右
+        find(root.right);
+        postOrder.push(root.val); // 后序：左右根
+    }
+    find(root);
+    return [preOrder, inOrder, postOrder];
+}
+module.exports = {
+    threeOrders : threeOrders
+};
+```
+
 # 贝壳找房
 
 ## 牛牛们上班
