update：买卖股票的最好时机

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2433,6 +2433,92 @@ module.exports = {
 };
 ```
 
+## 买卖股票的最好时机
+
+**题目描述**
+
+假设你有一个数组，其中第\ i *i* 个元素是股票在第\ i *i* 天的价格。
+你有一次买入和卖出的机会。（只有买入了股票以后才能卖出）。请你设计一个算法来计算可以获得的最大收益。
+
+示例1
+
+输入
+
+```
+[1,4,2]
+```
+
+返回值
+
+```
+3
+```
+
+示例2
+
+输入
+
+```
+[2,4,1]
+```
+
+返回值
+
+```
+2
+```
+
+### 贪心
+
+```js
+/**
+  * 
+  * @param prices int整型一维数组 
+  * @return int整型
+  */
+function maxProfit( prices ) {
+    // write code here
+    let minVal = prices[0], profit = 0;
+    for(let i = 1; i < prices.length; ++i) {
+        if(prices[i] < minVal){
+            minVal = prices[i];
+        }
+        profit = Math.max(profit, prices[i] - minVal);
+    }
+    return profit;
+}
+module.exports = {
+    maxProfit : maxProfit
+};
+```
+
+### 动态规划
+
+```js
+/**
+  * 
+  * @param prices int整型一维数组 
+  * @return int整型
+  */
+function maxProfit( prices ) {
+    // write code here
+    // 买卖股票的最大收益
+    // 使用动态规划实现
+        let n = prices.length;
+        if(!n) return 0;
+        // 前i只最多交易1次的最大利润
+        let dp = new Array(n).fill(0);
+        for(let i = 1, minv = prices[0]; i < n; i++){
+            dp[i] = Math.max(dp[i-1], prices[i] - minv);
+            minv = Math.min(prices[i],minv);
+        }
+        return dp[n-1];
+}
+module.exports = {
+    maxProfit : maxProfit
+};
+```
+
 # 贝壳找房
 
 ## 牛牛们上班
