--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -549,6 +549,73 @@ module.exports = {
 };
 ```
 
+## 找到字符串的最长无重复子串
+
+**题目描述**
+
+给定一个数组arr，返回arr的最长无的重复子串的长度(无重复指的是所有数字都不相同)。
+
+示例1
+
+输入
+
+```
+[2,3,4,5]
+```
+
+返回值
+
+```
+4
+```
+
+示例2
+
+输入
+
+```
+[2,2,3,4,3]
+```
+
+返回值
+
+```
+3
+```
+
+### Map()
+
+```js
+/**
+ * 
+ * @param arr int整型一维数组 the array
+ * @return int整型
+ */
+function maxLength( arr ) {
+    // write code here
+    let start = 0 , end = 0;
+  let res = 0;
+  const map = new Map()
+  while(end<arr.length){
+    if(map.get(arr[end])>=start){
+      start = map.get(arr[end])+1
+      map.set(arr[end],end)
+    } else {
+      map.set(arr[end],end)
+      res = Math.max(res, end - start + 1)
+    }
+    end++
+  }
+  return res
+    
+}
+module.exports = {
+    maxLength : maxLength
+};
+```
+
+
+
 # 搜狗
 
 # 问答题
