--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -614,7 +614,91 @@ module.exports = {
 };
 ```
 
+## 换钱的最少货币数
 
+**题目描述**
+
+给定数组arr，arr中所有的值都为正整数且不重复。每个值代表一种面值的货币，每种面值的货币可以使用任意张，再给定一个aim，代表要找的钱数，求组成aim的最少货币数。
+
+如果无解，请返回-1.
+
+【要求】
+
+时间复杂度*O*(*n*×*a**i**m*)，空间复杂度On。
+
+示例1
+
+输入
+
+```
+[5,2,3],20
+```
+
+返回值
+
+```
+4
+```
+
+示例2
+
+输入
+
+```
+[5,2,3],0
+```
+
+返回值
+
+```
+0
+```
+
+示例3
+
+输入
+
+```
+[3,5],2
+```
+
+返回值
+
+```
+-1
+```
+
+### 动态规划
+
+![img](https://www.nowcoder.com/equation?tex=dp_i&preview=true)表示凑成面额i的需要的最少货币数。
+然后枚举每个面额的货币，更新dp数组即可。
+
+![img](https://www.nowcoder.com/equation?tex=dp%5Bi%5D%20%3D%20min(dp%5Bi%5D%2C%20dp%5Bi%20-%20a%5Bj%5D%5D)&preview=true)
+
+```js
+/**
+ * 最少货币数
+ * @param arr int整型一维数组 the array
+ * @param aim int整型 the target
+ * @return int整型
+ */
+function minMoney( arr ,  aim ) {
+    // write code here
+    if(!arr || !arr.length) return -1;
+    const dp = new Array(aim + 1).fill(Infinity);//把dp数组全部定为最大值
+    dp[0] = 0;//初始化数组
+    for(let i = 0; i < arr.length; i++) {// 遍历目标值
+        for(let j = arr[i]; j <= aim; j++) {// 遍历钱币 如果当前的钱币比目标值小就可以兑换
+            //当前的钱数-当前面值，为之前换过的钱数，如果能够兑换只需要在加+1即可，如果不能就取aim+1;
+            dp[j] = Math.min(dp[j], dp[j - arr[i]] + 1);
+        }
+    }
+    return dp[aim] === Infinity ? -1 : dp[aim];
+}
+module.exports = {
+    minMoney : minMoney
+};
+```
 
 # 搜狗
 
