update：将字符串转化为整数

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2670,6 +2670,57 @@ module.exports = {
 };
 ```
 
+## 将字符串转化为整数
+
+**题目描述**
+
+实现函数 atoi 。函数的功能为将字符串转化为整数
+
+提示：仔细思考所有可能的输入情况。这个问题没有给出输入的限制，你需要自己考虑所有可能的情况。
+
+示例1
+
+输入
+
+```
+"123"
+```
+
+返回值
+
+```
+123
+```
+
+1. 处理空字符串
+2. 忽略前置空格
+3. 保存符号
+4. 处理非法输入
+5. 处理溢出
+
+```js
+/**
+  * 
+  * @param str string字符串 
+  * @return int整型
+  */
+function atoi( str ) {
+    // write code here
+    if(!str) return 0;
+    const max = Math.pow(2, 31) - 1;
+    const min = -Math.pow(2, 31);
+    if(str.length) {
+        let res = parseInt(str);
+        if(res > max) return max;
+        if(res < min) return min;
+        return res;
+    }
+}
+module.exports = {
+    atoi : atoi
+};
+```
+
 # 贝壳找房
 
 ## 牛牛们上班
