update：数组中相加为0的三元组

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2721,6 +2721,78 @@ module.exports = {
 };
 ```
 
+## 数组中相加为0的三元组
+
+**题目描述**
+
+给出一个有n个元素的数组S，S中是否有元素a,b,c满足a+b+c=0？找出数组S中所有满足条件的三元组。
+
+注意：
+
+1. 三元组（a、b、c）中的元素必须按非降序排列。（即a≤b≤c）
+2. 解集中不能包含重复的三元组。
+
+```
+例如，给定的数组 S = {-10 0 10 20 -10 -40},解集为(-10, 0, 10) (-10, -10, 20)
+```
+
+示例
+
+输入
+
+```
+[-2,0,1,1,2]
+```
+
+返回值
+
+```
+[[-2,0,2],[-2,1,1]]
+```
+
+### 双指针
+
+先排序，然后以第一个值为基准开始遍历，用双指针求第二个值和第三个值。
+
+```js
+/**
+ * 
+ * @param num int整型一维数组 
+ * @return int整型二维数组
+ */
+function threeSum( num ) {
+    // write code here
+    let res = [];
+    let len = num.length;
+    num.sort((a, b) => a - b);
+    for(let i = 0; i < len - 2; i++) {
+        let head = i +1;
+        let tail = len - 1;
+        while(head < tail) {
+            let sum = num[i] + num[head] + num[tail];
+            if(sum > 0) {
+                tail--;
+            }else if(sum < 0) {
+                head++;
+            }else{
+                res.push([num[i], num[head], num[tail]]);
+                while(head + 1 < tail && num[head + 1] === num[head]) head++;// 防止重复
+                while(tail - 1 < head && num[tail - 1] === num[head]) tail--;// 防止重复
+                head++;
+                tail--;
+            }
+        }
+        while(i < len - 2 && num[i + 1] === num[i]) i++;// 防止重复
+    }
+    return res;
+}
+module.exports = {
+    threeSum : threeSum
+};
+```
+
+
+
 # 贝壳找房
 
 ## 牛牛们上班
