--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2791,7 +2791,55 @@ module.exports = {
 };
 ```
 
+# 百度
 
+## 最大正方形
+
+**题目描述**
+
+给定一个由0和1组成的2维矩阵，返回该矩阵中最大的由1组成的正方形的面积
+
+示例1
+
+输入
+
+```
+[[1,0,1,0,0],[1,0,1,1,1],[1,1,1,1,1],[1,0,0,1,0]]
+```
+
+返回值
+
+```
+4
+```
+
+### 动态规划
+
+```js
+/**
+ * 最大正方形
+ * @param matrix char字符型二维数组 
+ * @return int整型
+ */
+function solve( matrix ) {
+    // write code here
+    let maxSquare = 0;
+    let xLen = matrix.length;
+    let yLen = matrix[0].length;
+    for(let i = 0; i < xLen; i++) {
+        for(let j = 0; j < yLen; j++) {
+            if(matrix[i][j] == 1 && i != 0 && j != 0) {
+                matrix[i][j] = Math.min(matrix[i - 1][j], matrix[i][j - 1], matrix[i - 1][j - 1]) + 1;
+            }
+            maxSquare = Math.max(maxSquare, matrix[i][j]);
+        }
+    }
+    return maxSquare * maxSquare;
+}
+module.exports = {
+    solve : solve
+};
+```
 
 # 贝壳找房
 
