--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1447,6 +1447,73 @@ module.exports = {
 };
 ```
 
+## 括号序列
+
+**题目描述**
+
+给出一个仅包含字符'(',')','{','}','['和']',的字符串，判断给出的字符串是否是合法的括号序列
+括号必须以正确的顺序关闭，"()"和"()[]{}"都是合法的括号序列，但"(]"和"([)]"不合法。
+
+示例1
+
+输入
+
+```
+"["
+```
+
+返回值
+
+```
+false
+```
+
+示例2
+
+输入
+
+```
+"[]"
+```
+
+返回值
+
+```
+true
+```
+
+### Map()
+
+- 边遍历边匹配。也就是遍历的时候遇到左括号存入数组，下次遇到的第一个右括号必须和数组中最后一个元素匹配，否则为无效字符串，匹配完成后从数组中删除此元素。
+- 若最终数组为空，表示括号已全部匹配完，字符串有效。
+
+```js
+/**
+  * 
+  * @param s string字符串 
+  * @return bool布尔型
+  */
+function isValid( s ) {
+    // write code here
+    const map = {
+        "{": "}",
+        "[": "]",
+        "(": ")"
+    }
+    let leftArr = [];
+    for (var ch of s) {
+        if (ch in map) leftArr.push(ch);//为左括号时，顺序保存
+        else {//为右括号时，与数组末位匹配
+            if (ch != map[leftArr.pop()]) return false;
+        }
+    }
+    return !leftArr.length;//防止全部为左括号
+}
+module.exports = {
+    isValid : isValid
+};
+```
+
 # 字节跳动
 
 ## 排序
