--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2908,6 +2908,64 @@ module.exports = {
 };
 ```
 
+## 反转链表
+
+**题目描述**
+
+输入一个链表，反转链表后，输出新链表的表头。
+
+示例1
+
+输入
+
+```
+{1,2,3}
+```
+
+返回值
+
+```
+{3,2,1}
+```
+
+初始化：3个指针
+1）pre指针指向已经反转好的链表的最后一个节点，最开始没有反转，所以指向null
+2）cur指针指向待反转链表的第一个节点，最开始第一个节点待反转，所以指向phead
+3）res指针指向待反转链表的第二个节点，目的是保存链表，因为cur改变指向后，后面的链表则失效了，所以需要保存
+接下来，循环执行以下三个操作
+1）res= cur, 保存作用
+2）pre = res， res= cur; 指针后移，操作下一个未反转链表的第一个节点
+3）res->next  = pre未反转链表的第一个节点的下个指针指向已反转链表的最后一个节点
+循环条件，是cur != null
+循环结束后，cur为null，所以返回pre，即为反转后的头结点
+
+```js
+/*function ListNode(x){
+    this.val = x;
+    this.next = null;
+}*/
+function ReverseList(pHead)
+{
+    // write code here
+    let pre = null;
+    let cur = pHead;
+    let res = null;
+    while (cur != null) {
+        res = cur;
+        cur = cur.next;
+        res.next = pre;
+        pre = res;
+    }
+    return res;
+}
+module.exports = {
+    ReverseList : ReverseList
+};
+```
+
+时间复杂度：O(n), 遍历一次链表
+空间复杂度：O(1)
+
 # 贝壳找房
 
 ## 牛牛们上班
@@ -3094,3 +3152,4 @@ rl.on('line',function(input){
 
 # 
 
+ 
