update: 数组中未出现的最小正整数

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2858,6 +2858,86 @@ module.exports = {
 };
 ```
 
+## 数组中未出现的最小正整数
+
+**题目描述**
+
+给定一个无序数组arr，找到数组中未出现的最小正整数
+
+例如arr = [-1, 2, 3, 4]。返回1
+
+arr = [1, 2, 3, 4]。返回5
+
+[要求]
+
+时间复杂度为O(n)，空间复杂度为*O*(1)
+
+示例1
+
+输入
+
+```
+[-1,2,3,4]
+```
+
+返回值
+
+```
+1
+```
+
+备注:
+
+```
+1 ≤N≤106
+|arr_i|≤109
+```
+
+### 暴力
+
+```js
+/**
+ * return the min number
+ * @param arr int整型一维数组 the array
+ * @return int整型
+ */
+function minNumberdisappered( arr ) {
+    // write code here
+    let num = 0;
+    for (const a of arr) {
+        if (a > 0) num ^= a; // 0 ^ 1 ^ 1 ^ 2 ^ 2 = 0, 0 ^ 1 ^ 2 ^ 2 = 1
+    }
+    for (let i = 1; i <= arr.length; ++i) {
+        num ^= i;// 如果某个数不存在， num将不为0
+    }
+    return num == 0 ? arr.length + 1 : num;
+}
+module.exports = {
+    minNumberdisappered : minNumberdisappered
+};
+```
+
+```js
+/**
+ * return the min number
+ * @param arr int整型一维数组 the array
+ * @return int整型
+ */
+function minNumberdisappered( arr ) {
+    // write code here
+    const len = arr.length;
+    for (let i = 1; i <= len; i++) {
+        if (arr.indexOf(i) === -1) {
+            return i;
+        }
+    }
+    return len + 1;
+}
+module.exports = {
+    minNumberdisappered : minNumberdisappered
+};
+```
+
 # 百度
 
 ## 最大正方形
