update: 跟谁学笔试

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -3164,6 +3164,118 @@ for(let i = 1; i < len; ++i){
 print(Math.max(dp[len - 1][0], dp[len - 1][1]));
 ```
 
+# 跟谁学
+
+## 求js数组的最大值和最小值的差值
+
+```js
+定义数组
+var ary = [54,65,43,21,12,34,45,58,97,24];
+
+1、字符串拼接法
+利用toString和join把数组转换为字符串，再和Math的max和min方法分别进行拼接，最后执行eval方法
+//eval() 函数会将传入的字符串当做 JavaScript 代码进行执行。
+/*
+eval() 是一个危险的函数， 它使用与调用者相同的权限执行代码。如果你用 eval() 运行的字符串代码被恶意方（不怀好意的人）修改，您最终可能会在您的网页/扩展程序的权限下，在用户计算机上运行恶意代码。更重要的是，第三方代码可以看到某一个 eval() 被调用时的作用域，这也有可能导致一些不同方式的攻击。相似的 Function 就不容易被攻击。
+eval() 通常比其他替代方法更慢，因为它必须调用 JS 解释器，而许多其他结构则可被现代 JS 引擎进行优化。
+*/
+var maxN = eval("Math.max(" + ary.toString() + ")");
+var minN = eval("Math.min(" + ary.toString() + ")");
+或者
+var maxN = eval("Math.max(" + ary.join() + ")");
+var minN = eval("Math.min(" + ary.join() + ")");
+
+2、排序法
+先把数组从小到大排序，数组第一个即为最小值，最后一个即为最大值
+ary.sort(function(a,b){return a-b;});
+var minN = ary[0];
+var maxN = ary[ary.length-1];
+
+3、假设法
+假设数组第一个为最大（或最小值），和后边进行比较，若后边的值比最大值大（或比最小值小），则替换最大值（或最小值）
+var maxN = ary[0];
+var minN = ary[0];
+for(var i=1;i<ary.length;i++){
+var cur = ary[i];
+cur>maxN ? maxN=cur : null;
+cur<minN ? minN=cur : null;
+}
+
+4、Math的max和min方法
+使用apply方法使数组可以作为传递的参数或者...解构赋值
+
+var maxN = Math.max.apply(null,ary);
+var minN = Math.min.apply(null,ary);
+
+var maxN = Math.max(...ary);
+var minN = Math.min(...ary);
+测试
+console.log(maxN)
+console.log(minN)
+console.log(maxN - minN)
+```
+
+##  数组中出现次数超过一半的数字
+
+数组中有一个数字出现的次数超过数组长度的一半，请找出这个数字。
+
+你可以假设数组是非空的，并且给定的数组总是存在多数元素。
+
+**示例 1:**
+
+```
+输入: [1, 2, 3, 2, 2, 2, 5, 4, 2]
+输出: 2
+```
+
+### 排序
+
+如果将数组 nums 中的所有元素按照单调递增或单调递减的顺序排序，那么下标为 n/2的元素（下标从 0 开始）一定是众数
+
+```js
+var majorityElement = function(nums) {
+    nums.sort((a, b) => a - b);
+    return nums[Math.floor(nums.length / 2)];
+}
+```
+
+- 时间复杂度：O(nlogn)。将数组排序的时间复杂度为O(nlogn)。
+- 空间复杂度：O(logn)。如果使用语言自带的排序算法，需要使用 O(logn) 的栈空间。如果自己编写堆排序，则只需要使用 O(1)的额外空间。
+
+### 投票算法
+
+投票算法的原理是通过不断消除不同元素直到没有不同元素，剩下的元素就是我们要找的元素。
+
+- 我们维护一个候选众数 majority和它出现的次数 count。初始时 majority可以为nums[0]，count 为 1；
+
+- 我们遍历数组 nums 中的所有元素，对于每个元素 i，在判断 i之前，如果 count 的值为 0，我们先将 i的值赋予 majority，随后我们判断 i：
+
+  - 如果 i与 majority相等，那么计数器 count 的值增加 1；
+  - 如果 i与 majority不等，那么计数器 count 的值减少 1。
+
+  在遍历完成后，majority即为整个数组的众数。
+
+```js
+var majorityElement = function(nums) {
+    let count = 1;
+    let majority = nums[0];
+    for (let i = 1; i < nums.length; i++) {
+        if (count === 0) {
+            majority = nums[i];
+        }
+        if (nums[i] === majority) {
+            count++;
+        }else {
+            count--;
+        }
+    }
+    return majority;
+}
+```
+
+- 时间复杂度：O(N)，其中N为数组长度
+- 空间复杂度：O(1)
+
 # 解题模板
 
 - node.js
@@ -3229,7 +3341,5 @@ rl.on('line',function(input){
 12 18 5 20 10        //N个数
 20 5                //返回结果
 ```
-
-# 
 
  
