update: 合并两个有序的数组

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1908,7 +1908,15 @@ module.exports = {
 
 给出两个有序的整数数组 ![img](https://www.nowcoder.com/equation?tex=A%20%5C)和 ![img](https://www.nowcoder.com/equation?tex=B%5C)，请将数组 ![img](https://www.nowcoder.com/equation?tex=B%5C)合并到数组 ![img](https://www.nowcoder.com/equation?tex=A%5C)中，变成一个有序的数组
 注意：
-可以假设 ![img](https://www.nowcoder.com/equation?tex=A%5C)数组有足够的空间存放 ![img](https://www.nowcoder.com/equation?tex=B%5C)数组的元素， ![img](https://www.nowcoder.com/equation?tex=A%5C)和 ![img](https://www.nowcoder.com/equation?tex=B%5C)中初始的元素数目分别为 ![img](https://www.nowcoder.com/equation?tex=m%5C)和 ![img](https://www.nowcoder.com/equation?tex=n%5C)
+可以假设 ![img](https://www.nowcoder.com/equation?tex=A%5C)数组有足够的空间存放 ![img](https://www.nowcoder.com/equation?tex=B%5C)数组的元素， ![img](https://www.nowcoder.com/equation?tex=A%5C)和 ![img](https://www.nowcoder.com/equation?tex=B%5C)中初始的元素数目分别为 ![img](https://www.nowcoder.com/equation?tex=m%5C)和 n
+
+### **归并排序**
+
+**思路:**
+
+1. 从A和B的m、n尾部遍历
+2. 比较A和B的m、n尾部的值，将较大值赋给A整体数组的尾部，指针左移
+3. 注意特殊情况处理：A的尾指针已遍历结束，B尾指针还未结束。
 
 ```js
 /**
@@ -1921,13 +1929,13 @@ function merge( A, m, B, n ) {
     // write code here
     let len = m + n
     while(n > 0 && m > 0) {
-        if (A[m - 1] > B[n - 1]) {
+        if (A[m - 1] > B[n - 1]) {//如果A的m尾部的值大
             A[--len] = A[--m]
         } else {
             A[--len] = B[--n]
         }
     }
-    while(n) {
+    while(n) {//如果B没有遍历完，那么之间丢在A数组里面
         A[--len] = B[--n]
     }
     return A
