--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -2086,6 +2086,33 @@ module.exports = {
 6
 ```
 
+### 求和公式
+
+**思路**：因为 ![0-n](https://www.nowcoder.com/equation?tex=0%20-%20n) 个数里面只缺少一个数，所以可以直接对 ![0-n](https://www.nowcoder.com/equation?tex=0%20-%20n) 求和，然后再减去![a](https://www.nowcoder.com/equation?tex=a) 数组的和就是答案了。
+
+```js
+/**
+ * 找缺失数字
+ * @param a int整型一维数组 给定的数字串
+ * @return int整型
+ */
+function solve( a ) {
+    // write code here
+    let aLen = a.length;
+    let presum = aLen * (aLen + 1) / 2;
+    let sum = 0;
+    for (let i = 0; i < aLen; i++) {
+        sum += a[i];
+    }
+    return presum - sum;
+}
+module.exports = {
+    solve : solve
+};
+```
+
+时间复杂度：![图片说明](https://www.nowcoder.com/equation?tex=O(n))
+
 ### 二分查找
 
 ```js
