update: 第一次只出现一次的字符

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1584,7 +1584,56 @@ module.exports = {
 };
 ```
 
+# 北森
 
+## 第一次只出现一次的字符
+
+**题目描述**
+
+在一个字符串(0<=字符串长度<=10000，全部由字母组成)中找到第一个只出现一次的字符,并返回它的位置, 如果没有则返回 -1（需要区分大小写）.（从0开始计数）
+
+示例1
+
+输入
+
+```
+"google"
+```
+
+返回值
+
+```
+4
+```
+
+###### map两次遍历
+
+遍历字符串，将每个字符的值与出现次数记录到 map 中
+再次遍历 map.keys() ，获取 map 中每个字符出现的次数，判断是否仅仅只有 1 次，返回第一个仅出现一次的字符
+
+```js
+var firstUniqChar = function(s) {
+    if(!s) return " "
+    let map = new Map()
+    for(let c of s) {
+        if(map.has(c)) {
+            map.set(c, map.get(c) + 1)
+        } else {
+            map.set(c, 1)
+        }
+    }
+    for(let c of map.keys()) {
+        if(map.get(c) === 1) {
+            return c
+        }
+    }
+
+    return  " "
+};
+```
+
+- 时间复杂度：O(n)
+- 空间复杂度：O(n)
 
 # 字节跳动
 
