update: 193. 有效电话号码

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1606,7 +1606,7 @@ module.exports = {
 4
 ```
 
-###### map两次遍历
+### map两次遍历
 
 遍历字符串，将每个字符的值与出现次数记录到 map 中
 再次遍历 map.keys() ，获取 map 中每个字符出现的次数，判断是否仅仅只有 1 次，返回第一个仅出现一次的字符
