--- a/程序员面试宝典.md
+++ b/程序员面试宝典.md
@@ -859,6 +859,136 @@ return this.helpStack[this.length - 1]
 };
 ```
 
+## 面试题 03.06. 动物收容所
+
+难度简单
+
+动物收容所。有家动物收容所只收容狗与猫，且严格遵守“先进先出”的原则。在收养该收容所的动物时，收养人只能收养所有动物中“最老”（由其进入收容所的时间长短而定）的动物，或者可以挑选猫或狗（同时必须收养此类动物中“最老”的）。换言之，收养人不能自由挑选想收养的对象。请创建适用于这个系统的数据结构，实现各种操作方法，比如`enqueue`、`dequeueAny`、`dequeueDog`和`dequeueCat`。允许使用Java内置的LinkedList数据结构。
+
+`enqueue`方法有一个`animal`参数，`animal[0]`代表动物编号，`animal[1]`代表动物种类，其中 0 代表猫，1 代表狗。
+
+`dequeue*`方法返回一个列表`[动物编号, 动物种类]`，若没有可以收养的动物，则返回`[-1,-1]`。
+
+**示例1:**
+
+```
+ 输入：
+["AnimalShelf", "enqueue", "enqueue", "dequeueCat", "dequeueDog", "dequeueAny"]
+[[], [[0, 0]], [[1, 0]], [], [], []]
+ 输出：
+[null,null,null,[0,0],[-1,-1],[1,0]]
+```
+
+**示例2:**
+
+```
+ 输入：
+["AnimalShelf", "enqueue", "enqueue", "enqueue", "dequeueDog", "dequeueCat", "dequeueAny"]
+[[], [[0, 0]], [[1, 0]], [[2, 1]], [], [], []]
+ 输出：
+```
+
+**解题思路**
+
+JS中**数组**功能比较强大，既可以动态扩容也可以实现栈和队列的功能，当拿到题目时首先想到需要什么数据结构完成什么功能。
+我们考虑使用数组来存储数据，需要包括	
+
+1.向数组尾部插入数据
+2.向数组头部弹出数据（dequeueAny）
+3.从数组中间弹出数据（拿猫或拿狗）
+
+因此我们需要寻找对应函数:
+1.push函数
+
+```js
+var fruits = ["Banana", "Orange", "Apple", "Mango"];
+fruits.push("Kiwi");       //  向 fruits 添加一个新元素
+```
+
+2.shift函数
+shift()函数会删除首个数组元素，并把所有其他元素“位移”到更低的索引。
+
+```js
+var fruits = ["Banana", "Orange", "Apple", "Mango"];
+fruits.shift();            // [Orange,Apple,Mango]
+```
+
+3.splice函数
+splice()函数可以用于拼接数组，或删除数组元素
+
+```js
+var fruits = ["Banana", "Orange", "Apple", "Mango"];
+fruits.splice(1, 1);        // [Banana,Apple,Mango]
+```
+
+在补充个this的有关知识:如果对象的方法里面包含this，this的指向就是方法运行时所在的对象。
+
+```js
+var AnimalShelf = function() {
+    this.animals = [];
+};
+var Animal = function(number,type){
+    this.number = number;
+    this.type = type;
+};
+/** 
+ * @param {number[]} animal
+ * @return {void}
+ */
+AnimalShelf.prototype.enqueue = function(animal) {
+    this.animals.push(animal);
+};
+
+/**
+ * @return {number[]}
+ */
+AnimalShelf.prototype.dequeueAny = function() {
+    if(this.animals.length==0){
+        return [-1,-1]; 
+    }
+    return this.animals.shift();
+};
+
+/**
+ * @return {number[]}
+ */
+AnimalShelf.prototype.dequeueDog = function() {
+    for(let i=0;i<this.animals.length;i++){
+        let nowAnimal = this.animals[i];
+        if(nowAnimal[1]===1){
+            this.animals.splice(i,1);
+            return nowAnimal;
+        }
+    }
+    return [-1,-1];
+};
+
+/**
+ * @return {number[]}
+ */
+AnimalShelf.prototype.dequeueCat = function() {
+    for(let i=0;i<this.animals.length;i++){
+        let nowAnimal = this.animals[i];
+        if(nowAnimal[1]===0){
+            this.animals.splice(i,1);
+            return nowAnimal;
+        }
+    }
+    return [-1,-1];
+};
+
+/**
+ * Your AnimalShelf object will be instantiated and called as such:
+ * var obj = new AnimalShelf()
+ * obj.enqueue(animal)
+ * var param_2 = obj.dequeueAny()
+ * var param_3 = obj.dequeueDog()
+ * var param_4 = obj.dequeueCat()
+ */
+```
+
+
+
 ## 面试题 17.08. 马戏团人塔
 
 难度中等
