update: 变换日期格式

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1635,6 +1635,101 @@ var firstUniqChar = function(s) {
 - 时间复杂度：O(n)
 - 空间复杂度：O(n)
 
+# 森亿智能
+
+## 对象深拷贝
+
+对列表dict_list = [{"a": "aa", "b": "bb"}, {"c": 123, "d": 456}] 中的字典的key, value 各自输出到列表中
+
+```js
+//获取vkey
+function deepKeys(object) {
+    var keys = [];
+    if (object instanceof Array) {
+        for (let i = 0; i < object.length; i++) {
+            for (var property in object[i]) {
+                keys.push(property);
+            }
+        }
+    }
+    return keys;
+}
+//获取valus
+function deepValues(object) {
+    var keys = [];
+    if (object instanceof Array) {
+        for (let i = 0; i < object.length; i++) {
+            for (var property in object[i]) {
+                keys.push(object[i][property]);
+            }
+        }
+    }
+    return keys;
+}
+
+//测试
+var dict_list = [{
+    "a": "aa",
+    "b": "bb"
+}, {
+    "c": 123,
+    "d": 456
+}]
+console.log(deepKeys(dict_list))
+console.log(deepValues(dict_list))
+```
+
+## 变换日期格式
+
+**YYYY/MM/DD->YYYY/DDD**
+
+最常使用到的日期表示格式是：YYYY/MM/DD，如：2019/12/05。
+
+含义：年份用4位数字表示、2位月份用2位数字表示、日期用2位数字表示。
+
+还有一种比较少见的日期表示格式是：YYYY/DDD，它的含义是：代表年份用4位数字，之后的3位数字，代表是这一年中的第几天。
+
+如：2019/01/01表示2019/001；2019/01/31表示为2019/031；
+
+问题：需要实现一个功能，输入YYYY/MM/DD格式的日期。经过转换后的输出YYYY/DDD格式的结果。如：输入2019/02/01，经过转换后返回的输出结果为2019/032。
+
+请描述一下你对实现这个功能的思路。（可以使用自然语言描述、伪代码描述、或自己熟悉的程序描述）
+
+```js
+function format(str) {
+    // 以'/'分割字符串为数组
+    let arr = str.split('/');
+    let year = arr[0];
+    let month = arr[1];
+    let days = arr[2];
+    // monthDays：所在月份之前的月份天数之和
+    let monthDays = 0;
+    let arrDate;
+    // 对月份的天数进行累加
+    for (let i = 0; i < month - 1; i++) {
+        // new Date(year, i, 0); // 根据月份设置日期
+        arrDate = new Date(arr[0], i, 0)
+        console.log(arrDate.getDate())
+        monthDays += arrDate.getDate() // 根据设置的日期来获取月份的天数,获得是标准时间,需要getDate()获得天数
+    }
+    let sum = monthDays + parseInt(arr[2]);
+    // 小于100前补0
+    if (sum < 10) {
+        sum = '00' + sum;
+    } else if (sum < 100) {
+        sum = '0' + sum;
+    }
+    let strDay = arr[0] + '/' + sum;
+    console.log(strDay);;
+}
+// 测试
+let str = '2019/01/31';
+format(str)
+
+```
+
+
+
 # 字节跳动
 
 ## 排序
