--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1728,7 +1728,53 @@ format(str)
 
 ```
 
+# 好未来
 
+## 求出数组中元素的最大差值
+
+```js
+function getMaxDiff( arr ) {
+    // write code here
+    let max = Math.max(...arr);
+    let min = Math.min(...arr);
+    return max-min
+}
+let arr = [1,3,5,8]
+console.log(getMaxDiff(arr))
+```
+
+## 最长的无重复子串
+
+### Map()
+
+**解题思路**使用 map 来存储当前已经遍历过的字符，key 为字符，value 为下标
+
+使用 start 来标记无重复子串开始下标，end 为当前遍历字符下标
+
+遍历字符串，判断当前字符是否已经在 map 中存在，存在则更新无重复子串开始下标 start 为相同字符的下一位置，此时从 start 到 end 为最新的无重复子串，更新 max ，将当前字符与下标放入 map 中
+
+最后，返回 max 即可
+
+```js
+var lengthOfLongestSubstring = function(s) {
+ 	let map = new Map(), max = 0;
+    // 使用 start 来标记无重复子串开始下标，end 为当前遍历字符下标
+    for (let end = 0, start = 0; end < s.length; end++) {
+        // 判断当前字符是否已经在 map 中存在
+        if(map.has(s[end])) {
+            // 存在则更新无重复子串开始下标 start 为相同字符的下一位置
+            start = Math.max(map.get(s[end]) + 1, start);
+        }
+        max = Math.max(max, end - start + 1);
+        map.set(s[end], end);
+    }
+    return max;
+};
+```
+
+**时间复杂度：O(n)**
+
+**空间复杂度：O(n)**
 
 # 字节跳动
 
