--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -3246,6 +3246,48 @@ module.exports = {
 };
 ```
 
+# 阿里
+
+## 最小的K个数
+
+**题目描述**
+
+给定一个数组，找出其中最小的K个数。例如数组元素是4,5,1,6,2,7,3,8这8个数字，则最小的4个数字是1,2,3,4。如果K>数组的长度，那么返回一个空的数组
+
+示例1
+
+输入
+
+```
+[4,5,1,6,2,7,3,8],4 
+```
+
+返回值
+
+```
+[1,2,3,4]
+```
+
+### 排序
+
+直接排序，然后获取前k小数据。
+
+```js
+function GetLeastNumbers_Solution(input, k)
+{
+    let arr = [];
+    arr=input.sort((a, b) =>{return a-b})
+    if(k > arr.length){
+        return [];
+    }
+    arr = arr.slice(0,k)
+    // arr.length = k
+    return arr
+}
+var a = GetLeastNumbers_Solution([4,5,1,6,2,7,3,8],4 )
+console.log(a)
+```
+
 # 百度
 
 ## 最大正方形
