update: 计算数组的最大嵌套深度

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1725,7 +1725,33 @@ function format(str) {
 // 测试
 let str = '2019/01/31';
 format(str)
+```
 
+## 计算数组的最大嵌套深度
+
+对于最大嵌套深度，比如：
+
+[1,2,3,4,5,6]的最大嵌套深度为1
+
+[1,[2,3],4,5,6]的最大嵌套深度为2
+
+[1,[[2,3,4]],5,6]的最大嵌套深度为3
+
+```js
+// 通过把多维数组拍平然后对比原数组的长度来查看原数组的最大嵌套深度
+function flat(arr) {
+    const isDeep = arr.some(item => item instanceof Array)
+    if(!isDeep) {
+         //如果没有深层数组，终止递归
+        return arr.length;
+    }
+    // 通过apply([], arr)把数组当做对象，传入参数数组arr，然后通过concat()方法连接数组实现数组降维
+    const res = Array.prototype.concat.apply([], arr);
+    return flat(res);//递归
+}
+let arr = [1,[[2,3,4]],5,6];
+let oldLength = flat(arr)
+console.log(oldLength - arr.length + 1)
 ```
 
 # 好未来
