add:分数转小数

--- a/校招算法真题.md
+++ b/校招算法真题.md
@@ -1754,6 +1754,122 @@ let oldLength = flat(arr)
 console.log(oldLength - arr.length + 1)
 ```
 
+# 便利蜂
+
+## 分数转小数
+
+**题目描述**：
+
+给定两个整数，分别表示分数的分子 numerator 和分母 denominator（不为0），以 字符串形式返回小数 。
+
+如果小数部分为循环小数，则将循环的部分括在括号内。返回值结尾不要有小数点后无效的0。
+
+输入描述
+
+两个整数，中间以“/”分隔开
+
+输出描述
+
+以 字符串形式返回小数 。
+
+如果小数部分为循环小数，则将循环的部分括在括号内。返回值结尾不要有小数点后无效的0。
+
+样例输入
+
+-1/4
+
+样例输出
+
+-0.25
+
+**判断余数是否出现过来表示是否出现循环**
+
+```js
+var fractionToDecimal = function(numerator, denominator) {
+    let str = '';
+    // 处理正负号
+    if (numerator * denominator < 0) str = '-'
+    // 被除数和除数取绝对值
+    numerator = Math.abs(numerator)
+    denominator = Math.abs(denominator)
+    // 处理整数部分
+    let num = Math.floor(numerator/denominator);
+    if (numerator - denominator * num === 0) {
+      return str + num
+    }
+    str += num
+    str += '.';
+    numerator -= denominator * num;
+    // numerator 表示余数
+    let chche = [numerator];
+    while(numerator !== 0) {
+      numerator*=10
+      if (numerator< denominator) {
+        chche.push(numerator)
+        str += 0
+        continue;
+      }
+      let num = Math.floor(numerator/denominator)
+      str += num
+      numerator -= denominator * num;
+      // 出现相同的余数 则退出
+      if (chche.includes(numerator)) {
+        break;
+      }
+      chche.push(numerator)
+    }
+    if (numerator === 0) return str;
+    let index = str.indexOf('.') + 1
+    let _index = chche.indexOf(numerator)
+    return str.slice(0, index+_index) + '(' + str.slice(index+_index) + ')'
+  };
+  console.log(fractionToDecimal(1,3))
+```
+
+## 装车
+
+**题目描述**：
+
+每天夜里便利蜂司机需要从仓库把装箱的包裹配送到门店。包裹重量不一，【必须按照出仓顺序】装车。
+
+司机每跑一趟就能赚一趟的运费，但是最多不能超过要求的 N 趟， 请帮司机选择一辆【最低运载能力】的卡车来赚到更多运费。
+
+例如：顺序出仓的10个包裹重量依次为 [1,2,3,4,5,6,7,8,9,10] （单位吨）， 需要在 5 趟内完成配送。 则需要选择一辆 15 吨的卡车能够刚好跑满 5 趟，赚到 5 份运费。
+
+控制台输入格式： 1,2,3,4,5,6,7,8,9,10#5
+
+输出：15
+
+注意：趟数必须小于等于包裹个数，不能空车跑。
+
+输入描述
+
+包裹重量使用逗号分隔，包裹重量结尾使用#号标识，#号后跟配送完成趟数。字符串内无空格
+
+输出描述
+
+卡车运载能力，以数字表示，如：15
+
+如果趟数大于包裹个数，需要输出“趟数必须小于等于【包裹个数】”，
+
+如：趟数必须小于等于10
+
+字符串内无空格
+
+样例输入
+
+1,2,3,4,5,6,7,8,9,10#5
+
+样例输出
+
+15
+
+```js
+
+```
+
+
+
 # 好未来
 
 ## 求出数组中元素的最大差值
@@ -1844,7 +1960,7 @@ var lengthOfLongestSubstring = function(s) {
 数组的长度不大于100000，数组中每个数的绝对值不超过10^9109
 ```
 
-###快速排序
+### 快速排序
 
 **解题思路**：两个移动的指针和一个基准值，一次排序后应达到基准值是一个分水岭，按从小到大排序，左边应该比基准值小，右边应该比基准值大。基本思路是：开始left不动，如果right指向的值大于等于基准值（基准值的大小可以等于一开始left指向的值），就right--；如果不满足上述条件，就right指向的值赋给left，同时left++；如果left指向的值小于等于基准值，就left++；如果不满足，就left指向的值赋给right，同时right--；循环结束条件：left<rigth。
 
@@ -2060,15 +2176,18 @@ const selectionSort = (arr) => {
 }
 ```
 
+### 堆排序HeapSort
+
+堆结构就是将一颗完全二叉树映射到数组中的一种存储方式
+
+- heapInsert和heapify
+  大根堆最重要的两个操作就是heapInsert和heapify，前者是当一个元素加入到大根堆时应该自底向上与其父结点比较，若大于父结点则交换；后者是当堆中某个结点的数值发生变化时，应不断向下与其孩子结点中的最大值比较，若小于则交换。下面是对应的代码：
+
+
+
 ### 库函数
 
 ```js
-/**
- * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
- * 将给定数组排序
- * @param arr int整型一维数组 待排序的数组
- * @return int整型一维数组
- */
 function MySort( arr ) {
     // write code here
     return arr.sort((a, b) => a - b);
